--- a/Frontend/views/employee-registration.html
+++ b/Frontend/views/employee-registration.html
@@ -765,11 +765,21 @@
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
-                    <div class="input-group mb-3">
-                        <input type="text" id="newDeptName" class="form-control"
-                            placeholder="Enter new department name">
-                        <button type="button" class="btn btn-primary" id="saveDeptBtn"
-                            onclick="saveNewDepartment()">Save</button>
+                    <div class="row g-2 mb-3">
+                        <div class="col-8">
+                            <label class="form-label small">Department Name</label>
+                            <input type="text" id="newDeptName" class="form-control form-control-sm"
+                                placeholder="Enter department name">
+                        </div>
+                        <div class="col-4">
+                            <label class="form-label small">Max Checkout</label>
+                            <input type="time" id="deptMaxCheckout" class="form-control form-control-sm"
+                                value="03:00">
+                        </div>
+                        <div class="col-12">
+                            <button type="button" class="btn btn-primary btn-sm w-100" id="saveDeptBtn"
+                                onclick="saveNewDepartment()">Save</button>
+                        </div>
                     </div>
                     <div class="divider"></div>
                     <h6 class="mb-2 fw-bold text-muted">Existing Departments</h6>
