Update from Antigravity: Change Payroll hour fields to HH:MM format for consistency

--- a/Frontend/views/payroll.html
+++ b/Frontend/views/payroll.html
@@ -601,7 +601,7 @@
                                     class="form-control form-control-custom bg-green-input"></div>
                             <div class="col-1 p-0 text-center"><span
                                     style="font-size: 0.75rem; font-weight:bold;">Hrs</span></div>
-                            <div class="col-4"><input type="number" id="totalHrsPerMonth"
+                            <div class="col-4"><input type="text" id="totalHrsPerMonth"
                                     class="form-control form-control-custom bg-green-input"></div>
                         </div>
                         <div class="row row-custom align-items-center">
@@ -617,7 +617,7 @@
                         </div>
                         <div class="row row-custom align-items-center">
                             <div class="col-4"><label class="form-label-custom">Worked(Hrs)</label></div>
-                            <div class="col-3"><input type="number" id="workedHrs"
+                            <div class="col-3"><input type="text" id="workedHrs"
                                     class="form-control form-control-custom bg-green-input"></div>
                             <div class="col-1 p-0 text-center"><span
                                     style="font-size: 0.75rem; font-weight:bold;">Rs</span></div>
@@ -641,7 +641,7 @@
                     <div class="card-body-custom">
                         <div class="row row-custom align-items-center">
                             <div class="col-4"><label class="form-label-custom">OverTime (Hrs)</label></div>
-                            <div class="col-3"><input type="number" id="overTimeHrs"
+                            <div class="col-3"><input type="text" id="overTimeHrs"
                                     class="form-control form-control-custom bg-blue-input"></div>
                             <div class="col-1 p-0 text-center"><span
                                     style="font-size: 0.75rem; font-weight:bold;">Rs</span></div>
@@ -712,7 +712,7 @@
                         <!-- Row 1: ShortTime -->
                         <div class="row row-custom align-items-center">
                             <div class="col-4"><label class="form-label-custom">ShortTime (Hrs)</label></div>
-                            <div class="col-3"><input type="number" id="shortTimeHrs"
+                            <div class="col-3"><input type="text" id="shortTimeHrs"
                                     class="form-control form-control-custom bg-blue-input"></div>
                             <div class="col-1 p-0 text-center"><span
                                     style="font-size: 0.75rem; font-weight:bold;">Rs</span></div>
