--- a/Frontend/views/groups.html
+++ b/Frontend/views/groups.html
@@ -490,6 +490,27 @@
                                             </ul>
                                         </li>
                                         <li>
+                                            <input type="checkbox" id="emp_salary_reports"
+                                                class="form-check-input"><label class="checkbox-label"
+                                                for="emp_salary_reports">Emp Salary Reports</label>
+                                            <ul class="list-unstyled">
+                                                <li><input type="checkbox" id="emp_ledger_rpt_link"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="emp_ledger_rpt_link">Employee Ledger</label></li>
+                                                <li><input type="checkbox" id="emp_balances_rpt_link"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="emp_balances_rpt_link">Employee Balances</label>
+                                                </li>
+                                                <li><input type="checkbox" id="advance_pay_rec_rpt_link"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="advance_pay_rec_rpt_link">Employee Advance</label></li>
+                                                <li><input type="checkbox" id="emp_salary_detail_rpt_link"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="emp_salary_detail_rpt_link">Employee Salary Detail</label>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li>
                                             <input type="checkbox" id="purchase_reports" class="form-check-input"><label
                                                 class="checkbox-label" for="purchase_reports">Purchase Reports</label>
                                             <ul>
