--- a/Frontend/views/groups.html
+++ b/Frontend/views/groups.html
@@ -881,7 +881,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/pageAccess.js"></script>
     <script src="/js/sidebar.js"></script>
-    <script src="/js/groups.js"></script>
+    <script src="/js/groups.js?v=2"></script>
 </body>
 
 </html>
