--- a/Frontend/views/main.html
+++ b/Frontend/views/main.html
@@ -26,7 +26,8 @@
             </div>
             <div style="flex: 1; display: flex; justify-content: flex-end; align-items: center;">
                 <div class="dropdown">
-                    <div class="d-flex align-items-center text-white" data-bs-toggle="dropdown" style="cursor: pointer;">
+                    <div class="d-flex align-items-center text-white" data-bs-toggle="dropdown"
+                        style="cursor: pointer;">
                         <div class="user-avatar text-white bg-primary rounded-circle d-flex align-items-center justify-content-center me-2"
                             style="width: 35px; height: 35px;">
                             <i class="fas fa-user"></i>
@@ -56,8 +57,8 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/pageAccess.js"></script>
-    <script src="/js/sidebar.js"></script>
+    <script src="/js/pageAccess.js?v=2"></script>
+    <script src="/js/sidebar.js?v=21"></script>
     <script src="/js/connection-monitor.js"></script>
 </body>
 
