Update from Antigravity: Add ST.Less Allowance to payroll slip print view

--- a/Frontend/views/print-payroll.html
+++ b/Frontend/views/print-payroll.html
@@ -502,7 +502,7 @@
                                 <div class="row"><div class="label">WareHouse Comm</div><div class="value">${(p.warehouseComm || 0).toLocaleString()}</div></div>
                                 <div class="row"><div class="label">Other Allowance</div><div class="value">${(p.otherAllow || 0).toLocaleString()}</div></div>
                                 <div class="row"><div class="label">Breakfast & Roti</div><div class="value">${(p.rent || 0).toLocaleString()}</div></div>
-                                <div class="row"><div class="label">Home_Allowance</div><div class="value">0</div></div>
+                                <div class="row"><div class="label">ST.Less Allowance</div><div class="value">${(p.stLateAllow || 0).toLocaleString()}</div></div>
                                 <div class="total-row"><div class="label">Gross Salary</div><div class="value">${totalEarnings.toLocaleString()}</div></div>
                                 <div class="row" style="background:#fcfcfc"><div class="label">Bank Paid</div><div class="value">${(p.bankPaid || 0).toLocaleString()}</div></div>
                             </div>
